# zanmei

./: .gitignore  AGENTS.md  CLAUDE.md  FIX_MVCCC_MASTER_MODERN.md  GEMINI.md  MODERNIZE_MASTER.md  Makefile  README.md  SKILLS.md  base.py  modern_design_samples.pptx  modernize_master.py  mvccc_master_modern.pptx  mvccc_master_modern_dark.pptx  pyproject.toml  raw.txt
bible/: index.py  scripture.py
hymns/: __init__.py  extract.py  hoc5.py  hoctoga.py  hymn_md.py  lyrics.py  mvccc.py  stats.py  utils.py  zanmei.py
mvccc/: slides.py  slidesapp.py
processed/mvccc/: 001_齊來稱頌偉大之神.md  002_你真偉大.md  003_晨曦破曉.md  005_這是天父世界.md  006_這是天父世界.md  007_你的信實廣大.md  012_父恩廣大.md  013_慈愛天父.md  013_慈愛天父，我心真感激袮.md  014_真神之愛.md  015_神愛世人.md  016_神聖妙愛.md  018_古老福音.md  022_耶穌大愛深不可測.md  023_我的牧者.md  025_如羊需牧人.md  026_天父兒女.md  030_奇妙聖經.md  034_要告訴耶穌.md  038_生命之道.md  043_安穩港口.md  046_天父必看顧你.md  047_耶穌是否仍然看顧.md  049_我只要信靠我主.md  050_有福的確據.md  051_我主耶穌，我依靠祢.md  053_主是我牧者我必不缺乏.md  054_信心使我得勝.md  057_信靠耶穌.md  059_靠主耶穌得勝.md  062_倚靠主永遠膀臂.md  063_昨日今日到永遠.md  064_信靠耶穌真是甜美.md  066_我知誰掌管明天.md  068_我為祂活.md  069_堅固磐石.md  070_永久磐石.md  073_每一天所渡過的每一刻.md  075_奇異恩典.md  078_耶穌奇妙的救恩.md  (+295 more)
services/: 2025-12-28.flags  2026-01-11.flags  2026-01-18.flags
tests/bible/: test_index.py  test_scripture.py
