[project]
name = "hymns"
version = "0.5.0"
description = "Download all resources for 'Hymns for God's People'"
authors = [{name = "Dyno Fu", email = "dyno.fu@gmail.com"}]
requires-python = ">=3.8"
dependencies = [
    "absl-py",
    "aiodns",
    "aiohttp",
    "attrs",
    "beautifulsoup4",
    "cattrs",
    "charset-normalizer",
    "hanziconv",
    "lxml",
    "pandas",
    "python-pptx",
    "requests",
    "streamlit>=0.49.0",
    "tqdm",
]

[project.optional-dependencies]
dev = [
    "ipython",
    "jupyter",
    "pytest",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 120
py36 = true
include = '\.pyi?$'
exclude = '''
/(
    \.cache
  | \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.pytest_cache
  | \.ropeproject
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
