[project]
name = "hymns"
version = "0.5.0"
description = "Download all resources for 'Hymns for God's People'"
authors = [{ name = "Dyno Fu", email = "dyno.fu@gmail.com" }]
requires-python = ">=3.8"
dependencies = [
  "absl-py",
  "aiodns",
  "aiohttp",
  "attrs",
  "beautifulsoup4",
  "cattrs",
  "charset-normalizer",
  "hanziconv",
  "lxml",
  "numpy<2.4",
  "pandas",
  "python-pptx",
  "requests",
  "streamlit>=0.49.0",
  "tqdm",
]

[project.optional-dependencies]
dev = ["ipython", "jupyter", "pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
# Same line length as Black
line-length = 120
target-version = "py38"

# Exclude same directories as Black
exclude = [
  ".cache",
  ".eggs",
  ".git",
  ".hg",
  ".mypy_cache",
  ".pytest_cache",
  ".ropeproject",
  ".tox",
  ".venv",
  "_build",
  "buck-out",
  "build",
  "dist",
]

[tool.ruff.lint]
# Enable recommended rules + enhanced linting
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort (import sorting)
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "A",   # flake8-builtins (shadowing built-ins)
  "T20", # flake8-print
  "ERA", # eradicate (commented-out code)
]

# Ignore rules matching current setup.cfg
ignore = [
  "D", # pydocstyle (docstring conventions)
]

[tool.ruff.lint.isort]
# Import sorting - migrated from setup.cfg
known-first-party = ["base", "bible", "hymns", "mvccc"]
known-third-party = ["aiohttp", "bs4", "hanziconv", "pptx", "pytest"]
combine-as-imports = true

[tool.ruff.format]
# Black-compatible formatting
quote-style = "double"
indent-style = "space"
line-ending = "auto"
