[project]
name = "hymns"
version = "0.5.0"
description = "Download all resources for 'Hymns for God's People'"
authors = [{ name = "Dyno Fu", email = "dyno.fu@gmail.com" }]
requires-python = ">=3.12"
dependencies = [
  "absl-py",
  "aiodns",
  "aiohttp",
  "attrs",
  "beautifulsoup4",
  "cattrs",
  "charset-normalizer",
  "hanziconv",
  "lxml",
  "numpy<2.4",
  "ollama>=0.6.1",
  "pandas",
  "pdfplumber>=0.11.9",
  "pillow>=12.0.0",
  "pytesseract>=0.3.13",
  "python-pptx",
  "requests",
  "streamlit>=0.49.0",
  "tqdm",
]

[project.optional-dependencies]
dev = ["ipython", "jupyter", "pytest", "ruff"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 128
exclude = [".cache", ".eggs", ".git", ".hg", ".mypy_cache", ".pytest_cache", ".ropeproject", ".tox", ".venv", "_build", "buck-out", "build", "dist"]
lint.select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort (import sorting)
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "A",   # flake8-builtins (shadowing built-ins)
  "T20", # flake8-print
  "ERA", # eradicate (commented-out code)
]
lint.ignore = ["D"]  # pydocstyle (docstring conventions)
lint.isort.known-first-party = ["base", "bible", "hymns", "mvccc"]
lint.isort.known-third-party = ["aiohttp", "bs4", "hanziconv", "pptx", "pytest"]
lint.isort.combine-as-imports = true
format.quote-style = "double"
format.indent-style = "space"
format.line-ending = "auto"
